Can't set single keyframe handle as Vector #40187

Closed
opened 2014-05-14 01:16:23 +02:00 by bassam kurdali · 6 comments
Member

System Information
gnu linux 64 bit/ fedora 20 / intel cpu / nvidia gpu

Blender Version
Broken: d1cf350
Worked: old bug!

Short description of error
If I want to set a single handle of a keyframe to vector It becomes free instead of vector, however, I can set the entire keyframe to vector, then click the other handle, set that one to e.g. aligned, and now I have a single handle vector - I just can't do it directly:
Exact steps for others to reproduce the error
1- open the attached file bug2.blend
2- try to set the selected handle to vector (won't work)
3- select the keyframe in the middle (for both handles)
4- set the entire keyframe to vector
5- now select the other handle
6- set that handle back to aligned
7- now the first one is vector only as intended
What should happen
2- should succeed!

**System Information** gnu linux 64 bit/ fedora 20 / intel cpu / nvidia gpu **Blender Version** Broken: d1cf350 Worked: old bug! **Short description of error** If I want to set a single handle of a keyframe to vector It becomes free instead of vector, however, I can set the entire keyframe to vector, then click the other handle, set that one to e.g. aligned, and now I have a single handle vector - I just can't do it directly: **Exact steps for others to reproduce the error** 1- open the attached file [bug2.blend](https://archive.blender.org/developer/F88887/bug2.blend) 2- try to set the selected handle to vector (won't work) 3- select the keyframe in the middle (for both handles) 4- set the entire keyframe to vector 5- now select **the other** handle 6- set that handle back to aligned 7- now the first one is vector only as intended **What should happen** 2- should succeed!
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @BassamKurdali

Added subscriber: @BassamKurdali
Campbell Barton self-assigned this 2014-05-14 02:42:27 +02:00

This issue was referenced by 53efee6754

This issue was referenced by 53efee67547c7c261560cdeae6727987983fa5fe

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 53efee6754.

Closed by commit 53efee6754.
Author
Member

Thanks!

Thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40187
No description provided.